# dprint-plugin-shfmt

./: .dprint.json  Cargo.toml  LICENSE  README.md  dprint.json
.github/workflows/: ci.yml  publish.yml
scripts/: createPluginFile.mjs
src/: configuration.rs  format_text.rs  main.rs  plugin.rs  process_plugin.rs
