[package]
name = "dprint-plugin-shfmt"
version = "3.3.0"
authors = ["Tice Cosmos <tice@139.com>"]
edition = "2018"
license = "MIT"


[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"


[dependencies]
dprint-core = { version = "0.43", features = ["process"] }
structopt = "0.3"
strum = { version = "0.21", features = ["derive"] }
tempfile = "3.2"

serde = { version = "*", features = ["derive"] }
